--- a/EMCseminar3.tex
+++ b/EMCseminar3.tex
@@ -68,7 +68,7 @@
 \begin{document}
  
 \title{Семинар \No3 по курсу <<Электромагнитная совместимость
-РЭС>>. \\ Моделирование помехоподавляющего фильтра.}
+РЭС>>. \\ Моделирование помехоподавляющего фильтра нижних частот.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
 \maketitle
@@ -212,50 +212,177 @@ $Z_C$ и $Z_L$ --- индуктивное и емкостное сопротивления:
 \node (V1) [ac source,info={$e_i$},point up] at (-0.5,0) {};
 \node (Zi) [resistor,point up, info={$Z_i$}] at (-0.5,1.2) {};
 
-\foreach \x in {0,5,10} {
+\foreach \x in {0,3.5,7} {
 \begin{scope}[shift={(\x,0)}]
-\node (C1) [capacitor, point up, info={$C$}] at (1,0.5) {};
+
 \node (L1) [rotate=180,inductor, info'={$L_1$}] at (2.5,1) {};
 \node (L2) [inductor,info'={$L_2$}] at (2.5,0.5) {};
 \node (C2) [capacitor,point up,info'={$C$}] at (4,0.5) {};
-
-
-\node (p2) [contact] at (1,-0.7) {};
-\node (p3) [contact] at (1,2) {};
 \node (p4) [contact] at (4,-0.7) {};
 \node (p5) [contact] at (4,2) {};
-
-\draw (p3) -- ++(0.5,0) |- (L1);
+\draw (1,2) -- ++(0.5,0) |- (L1);
 \draw (p5) -- ++(-0.5,0) |- (L1);
-
 \draw (p4) -- ++(-0.5,0) |- (L2);
-\draw (p2) -- ++(0.5,0) |- (L2);
-\draw (p2) -- (C1) -- (p3);
+\draw (1,-0.7) -- ++(0.5,0) |- (L2);
 \draw (p4) -- (C2) -- (p5);
 \draw [very thick] (2,0.75) -- (3,0.75);
 \end{scope}
 }
-\foreach \x in {0,50mm} {
-\draw [xshift=\x] (4,2) -- (6,2);
-\draw [xshift=\x] (4,-0.7) -- (6,-0.7);
+\foreach \x in {0,35mm} {
+\draw [xshift=\x] (4,2) -- (4.5,2);
+\draw [xshift=\x] (4,-0.7) -- (4.5,-0.7);
 }
+\node (C1) [capacitor, point up, info={$C$}] at (1,0.5) {};
 \node (p1) [contact] at (-0.5,-0.7) {};
+\node (p2) [contact] at (1,-0.7) {};
+\node (p3) [contact] at (1,2) {};
 \node (gnd) [point down,ground] at (-0.5,-1.2) {};
-\node (Zl) [resistor,point up,info'={$Z_н$}] at (15,0.5) {};
+\node (Zl) [resistor,point up,info'={$Z_н$}] at (12,0.5) {};
 \draw (p5) -| (Zl) |- (p4);
 \draw (gnd) -- (V1) -- (Zi)  |- (1,2);
-\draw (p1) -- (1,-0.7);
+\draw (p1) -- (p2);
+\draw (p2) -- (C1) -- (p3);
 % \end{scope}
 \end{tikzpicture}
 \caption{Трёхзвенный помехоподавляющий фильтр с двухобмоточным
 дросселем.}\label{multisec}
 \end{figure}
 
+При слишком большом числе звеньев фильтр становится громоздким, и высокое
+затухание всё равно не может быть достигнуто, так как начинают проявляться
+просачивания сигнала через паразитные ёмкости монтажа. Поэтому для многозвённых
+фильтров целесообразно применение экранирования отдельных секций.
+
+\subsection{S-параметры пассивного четырёхполюсника}
+
+\subsection{S-параметры четырёхполюсника}
+
+П-образный ФНЧ является пассивным четырёхполюсником. Свойства пассивного
+четырёхполюсника в частотной области можно описать при помощи S-параметров.
+
+Четырёхполюсником является любая электронная схема, имеющая один вход и один
+выход: усилитель, фильтр, аттенюатор. Активный четырёхполюсник содержит
+источники питания и может усиливать входной сигнал. Активный четырёхполюсник
+как правило содержит биполярный или полевой транзистор, интегральный
+операционный усилитель и т.п. схемы. Пассивный четырёхполюсник не имеет
+источников питания. и не может усиливать сигнал. К пассивным четырёхполюсникам
+относятся LC- и RC- фильтры которые содержат только индуктивность, ёмкость и
+сопротивление.
+
+В радиотехнике для того, чтобы охарактеризовать четырёхполюсник применяется
+матрица S-параметров, или иначе матрица рассеяния. S-параметры устанавливают
+связь между нормированными амплитудами напряжения и тока на входе и на выходе
+четырёхполюсника. Если вход четырёхполюсника подключен к источнику переменного
+тока (генератору колебаний) с некоторым выходным сопротивлением $Z_1$, то часть
+энергии от источника передаётся на вход, а часть --- отражается от входа. Пусть
+нормированная амплитуда падающей на вход волны равна $a_1$, а отражённой волны
+$b_1$.
+
+Такое же рассуждение справедливо и для выхода четырёхполюсника, к которому
+подключена нагрузка с сопротивлением $Z_2$. Часть энергии, поступающей с выхода
+четырёхполюсника, поглощается нагрузкой, а часть энергии --- отражается от неё
+и поступает обратно в четырёхполюсник. Пусть нормированная амплитуда падающей на
+нагрузку волны равна $a_2$, а отражённой от нагрузки волны $b_2$.
+
+Нормированные амплитуды падающей и отражённой волны на входе и на выходе свзаны
+через матрицу рассеяния:
+
+
+\begin{eqnarray}
+ b_1&=&S_{11}a_1+S_{12}a_2 \\
+ b_2&=&S_{21}a_1+S_{22}a_2 
+\end{eqnarray}
+
+
+Физический смысл S-параметров следующий:
+
+$S_{11}$ --- коэффициент отражения $\Gamma_1$ от входа четырёхполюсника.
+Показывает степень согласования между источником входного сигнала (генератором
+колебаний) и входными цепями четырёхполюсника. Если $S_{11}=0$, то вся энергия
+от источника входного сигнала проходит на вход четырёхполюсника без отражения.
+
+$S_{12}$ --- коэффициент обратной передачи. Показывает степень передачи
+энергии с выхода четырёхполюсника на вход. Характеризует степень развязки между
+входом и выходом, что показывает устойчивость активных четырёхполюсников.
+
+$S_{21}$ --- коэффициент передачи. Равен коэффициенту усиления по мощности
+четырёхполюсника. Для активных четырёхполюсников может быть больше единицы, а
+для пассивных --- всегда меньше единицы.
+
+$S_{22}$ --- коэффициент отражения $\Gamma_2$ от нагрузки. Показывает степень
+передачи энергии с выхода в нагрузку. Если $S_{22}=0$, то вся энергия с выхода
+четырёхполюсника поглощается нагрузкой без отражения. 
+
+Для пассивных четырёхполюсников всегда $S_{21}=S_{12}$ и $S_{11}=S_{22}$, так
+как внутрь четырёхполюсника не поступает дополнительная энергия от источников
+питания. 
+
+Матрица S-параметров может быть преобразована в матрицу Z-параметров. В Qucs
+уже встроена готовая функция для расчёта S-параметров по S-параметрам. Она
+называется \verb|stoz()|. Z-параметры представляют собой входное, выходное и
+проходное сопротивление четырёхполюсника. Следует обратить внимание на
+следующие Z-параметры:
+
+$Z_{11}$ --- входное комплексное сопротивление (импеданс);
+
+$Z_{22}$ --- выходное комплексное сопротивление (импеданс);
+
 \section{Моделирование ФНЧ в программе Qucs}
 
 \subsection{Моделирование П-образного ФНЧ}
 
+Чтобы узнать параметры П-образного ФНЧ нужно произвести моделирование его
+S-параметров. Частотной зависимости коэффициента передачи фильтра $S_{21}$
+(АЧХ) будет соответствовать параметру \verb|S[2,1]|. Схема помехоподавляющего
+фильтра в программе Qucs показана на рис.\ref{filt1-qucs}.
+
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{sem3img/filt1.pdf}
+\end{center}
+\caption{П-образный фильтр с двухобмоточным дросселем в Qucs.}\label{filt1-qucs}
+\end{figure}
+
+Параметры компонента \verb|Индуктивно связанные катушки| (Tr1) показаны на
+рис.\ref{ind}. Используется дроссель с индуктивностью обмоток 2х0.8 мГн.
+Диалоговое окно вызывается двойным щелчком по компоненту.
+
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=0.45\textwidth]{sem3img/transf.png}
+\end{center}
+\caption{Параметры трансформатора Tr1.}\label{ind}
+\end{figure}
+
+Частотная зависимость параметра $S_{21}$, полученная в результате моделирования,
+показана на рис.\ref{filt1-qucs-s21}.
+
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{sem3img/filt1-s21.pdf}
+\end{center}
+\caption{АЧХ П-образного ФНЧ.}\label{filt1-qucs-s21}
+\end{figure}
+
+
 \subsection{Задание для самостоятельной работы}
 
+Собрать в программе Qucs схему на рис.\ref{filt1-qucs} и добиться её
+работоспособности. Выполнить моделирование S-параметров и Z-параметров.
+Построить графики частотной зависимости параметров $S_{21}$ (коэффициент
+передачи) и $Z_{11}$ (входное сопротивление).
+
+Промоделировать схему трёхзвённого П-образного ФНЧ (рис.\ref{P-filt2}).
+Выполнить моделирование S-параметров и Z-параметров.
+Построить графики частотной зависимости параметров $S_{21}$ (коэффициент
+передачи) и $Z_{11}$ (входное сопротивление). Сравнить АЧХ однозвенного и
+трёхзвенного фильтров. Чем объясняется различие АЧХ?
+
+
+\section{Заключение}
+
+В результате выполнения семинара студенты ознакомились с практическими
+способами подавления индустриальных радиопомех в цепях питания РЭА при помощи
+пассивных LC-ФНЧ. Произведено моделирование частотных параметров фильтров. 
 
 \end{document}
