--- a/EMCseminar4.tex
+++ b/EMCseminar4.tex
@@ -67,13 +67,18 @@
 
 \begin{document}
  
-\title{Семинар \No3 по курсу <<Электромагнитная совместимость
+\title{Семинар \No4 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Способы измерения помех.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
 \maketitle
 
 \section{Ведение}
+
+Цель данного семинара --- рассмотрение способов сопряжения измерительного
+оборудования с объектом измерения при измерении уровня кондуктивных помех,
+отдаваемых аппаратурой в цепь питания и в нагрузку. Рассматриваются эквиаленты
+сети и пробники напряжения.
 
 \section{Средства сопряжения измерительного оборудования с источником помех}
 
