--- a/EMCseminar5.tex
+++ b/EMCseminar5.tex
@@ -104,7 +104,7 @@
 нагревательный элемент, лампа накаливания и т.п. В течение каждого полупериода
 сетевого напряжения тиристор открывается как только ток его управляющего
 электрода достигнет порогового тока открывания тиристора. Ток нагрузки $I_н$
-имеет следующую форму:
+имеет форму, показанную на рис.\ref{curr}.
 
 \begin{figure}[!ht]
 \begin{center}
@@ -125,7 +125,7 @@ plot [domain=0:900, samples=144, smooth] (\x,{s1(\x)});
 {$\alpha$};
 \end{tikzpicture}
 \end{center}
-\caption{Осциллограмма тока нагрузки}
+\caption{Осциллограмма тока нагрузки $I_н$}\label{curr}
 \end{figure}
 
 Напряжение источника переменного тока изменяется по синусоидальному закону и
@@ -192,7 +192,10 @@ plot [domain=0:900, samples=144, smooth] (\x,{s1(\x)});
 
 \section{Моделирование спектра помех в тиристорном регуляторе}
 
-Промоделируем тиристорный регулятор в программе Qucs. Его схема показана на
+\subsection{Тиристорный регулятор в Qucs}
+
+Промоделируем тиристорный регулятор напряжения переменного тока 220 В, 50 Гц в
+программе Qucs. Его схема показана на
 рис.\ref{thyr-qucs}.
 
 \begin{figure}[!ht]
@@ -202,6 +205,21 @@ plot [domain=0:900, samples=144, smooth] (\x,{s1(\x)});
 \caption{Схема тиристорного регулятора в Qucs}\label{thyr-qucs}
 \end{figure}
 
+Пороговый ток включения тиристора (параметр \verb|Igt|) установлен равным 10
+мА, напряжение открывания --- 400 В (см.рис.\ref{param}). Виртуальный амперметр
+\verb|Pr1| служит для наблюдения за формой тока нагрузки (параметр
+\verb|Pr1.It|). 
+
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{sem5img/thyr-param.png}
+\end{center}
+\caption{Параметры тиристора на схеме рис.\ref{thyr-qucs}}\label{param}
+\end{figure}
+
+
+Угол открывания
+тиристора устанавливается резистором R2.
 Для измерения напряжения помех используется V-образный эквивалент сети
 (компоненты L1L2C1C2R3R4). Напряжение помех снимается с узла \verb|w1| или
 \verb|w2|.
@@ -209,8 +227,24 @@ plot [domain=0:900, samples=144, smooth] (\x,{s1(\x)});
 Чтобы вычислить спектр помех сначала производит моделирование переходного
 процесса. Нужно промоделировать как минимум один период сетевого напряжения
 ($1/50\,\,Гц = 20\,\,мс$). Затем вычисляем быстрое преобразование Фурье (БПФ)
-при помощи функции \verb|Time2Freq()|. Её результатом будет спектр напряжения с
-некоторым уровнем $U$.
+с нормировкой по времени и по амплитуде при помощи функции \verb|Time2Freq()|.
+Её результатом будет спектр напряжения с некоторым уровнем $U$.
+
+Максимальная частота $F_{max}$, которую можно получить в спектре связана с
+длительностью моделирования $\tau$, количеством точек расчёта и вычисляется на
+основе свойств дискретного преобразования Фурье:
+
+\begin{equation}
+ F_{max} = \frac{N}{2\tau} 
+\end{equation}
+
+В нашем случае $\tau=20\, мс = 20\cdot10^{-3}\,с$ и $N=10000$ поэтому:
+
+$$F_{max}=\frac{10000}{2\cdot20\,мс}=250\,кГц$$
+
+Следовательно, при помощи данного моделирования можно смоделировать спектр
+помех только до частоты 250 кГц. Чтобы смоделировать более высокие частоты,
+нужно увеличивать количество точек при расчёте переходного процесса. 
 
 Чтобы перевести выразить спектр в дБмкв, то есть в децибелах относительно
 опорного напряжения $U_0=1\,мкВ$, используем следующее выражение:
@@ -219,8 +253,35 @@ plot [domain=0:900, samples=144, smooth] (\x,{s1(\x)});
  U(\mbox{дБмкВ})=20\lg\frac{U}{U_0}
 \end{equation}
 
+В результате моделирования получаем следующую картину распределения спектра
+помех в дБмкВ по частотной оси (см. рис.\ref{spect}).
 
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=\textwidth]{sem5img/spect.pdf}
+\end{center}
+\caption{Спектр помех тиристорного регулятора полученный в
+результате моделирования}\label{spect}
+\end{figure}
+
+Из рисунка видим, что на частоте 250 кГц уровень помех достигает 80 дБмкВ, и
+снижается с ростом частоты. Для борьбы с данными помехами следует исключить
+открывание тиристора при ненулевом напряжении на нагрузке. Для этого
+применяется метод ШИМ в сочетании с устройством контроля открывания тиристора
+при пересечении сетевым напряжением нулевого уровня (zero-cross) или метод
+распределённых сетевых периодов (РСП), при котором тиристор также открывается
+только при нулевом напряжении.
+
+\subsection{Задание для самостоятельной работы}
+
+Собрать в Qucs схему на рис.\ref{thyr-qucs} и добиться её работоспособности.
+Смоделировать спектр помех. В отчёт включить спектр помех и осциллограммы тока
+нагрузки (использовать параметр \verb|Pr1.It|). Выполнить подписи по осям на
+русском языке.
 
 \section{Заключение}
+
+В результате выполнения семинара студенты ознакомились с принципом действия
+фазового тиристорного регулятора мощности переменного тока
 
 \end{document}
