Добавлены финальные PDF b исправлены опечатки

--- a/EMCseminar6.tex
+++ b/EMCseminar6.tex
@@ -288,7 +288,7 @@ R2 --- измерительный резистор; L1 --- паразитная индуктивность}\label{CDM}
 
 \begin{figure}[!ht]
 \begin{center}
-\includegraphics[width=0.75\textwidth]{sem6img/HBM-qucs-I.pdf}
+\includegraphics[width=0.75\textwidth]{sem6img/MM-qucs-I.pdf}
 \end{center}
 \caption{Форма тока MM ЭСР.}\label{MM-qucs-I}
 \end{figure}
