--- a/EMCseminar1.tex
+++ b/EMCseminar1.tex
@@ -46,7 +46,7 @@
 
 \begin{document}
  
-\title{Семинар \No1 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero 1 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Переходные процессы в индуктивной нагрузке как источник помех и
 способы борьбы с ними.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
@@ -144,7 +144,10 @@
 \textbf{Задание:} Промоделировать схему на рис.\ref{relay} и получить
 осциллограмму переходного процесса. Исследовать форму напряжения между
 контактами ключам S1 при помощи виртуального вольтметра Pr1. Сделать вывод об
-амплитуде перенапряжений. 
+амплитуде перенапряжений. Увеличить сопротивление резистора R1 в 4-5 раз 
+(активная составляющая). Как изменяется амплитуда выбросов напряжений? 
+Уменьшить индуктивность катушки в 5-10 раз. В отчёте привести осциллограммы для 
+модифицированной и немодифицированной схемы с пояснениями.
 
 \section{Способы подавления перенапряжений на индуктивной нагрузке}
 
@@ -203,8 +206,10 @@
 
 \textbf{Задание} Подключить RC-цепочку параллельно индуктивной нагрузке в схеме
 на рис.\ref{relay} и исследовать вид переходного процесса. Параметры
-RC-цепочки: $R_d=220$ Ом, $C_d=1$ мкФ. Произвольно изменить параметры
-RC-цепочки и сделать вывод о том насколько меняется амплитуда перенапряжений.
+RC-цепочки: $R_d=220$ Ом, $C_d=1$ мкФ. Подобрать параметры RC-цепочки так, 
+чтобы уменьшить амплитуду выброса напряжения в два раза по сравнению с 
+исходной, а затем чтобы увеличить амплитуду перенапряжений в два раза по 
+сравнению с исходной.
 
 \subsection{Демпферный диод}
 
