--- a/EMCseminar2.tex
+++ b/EMCseminar2.tex
@@ -46,7 +46,7 @@
 
 \begin{document}
  
-\title{Семинар \No2 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero 2 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Помехоподавляющие элементы.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
@@ -214,7 +214,8 @@ $f$:
 
 \subsubsection{Задание для самостоятельной работы}
 
-Используя схему на рис.\ref{cap-qucs} подбором её параметров (R,C,L)
+\begin{enumerate}
+ \item Используя схему на рис.\ref{cap-qucs} подбором её параметров (R,C,L)
 смоделировать зависимость импеданса от частоты для конденсатора ёмкостью 1 мкФ
 с диэлектриком Y5V типоразмера 1206. Зависимость импеданса конденсатора от
 частоты, заимствованная из даташита показана на рис. \ref{y5v-z}. В отчёте
@@ -228,8 +229,15 @@ $f$:
 частоты.}\label{y5v-z}
 \end{figure}
 
-Построить эквивалентную схему для 4 конденсаторов, включенных параллельно.
-Привести схему и графики в отчёте.
+\item Включить параллельно два конденсатора: X7S --- 0.1 мкФ и Y5V --- 1 мкФ, 
+построить частотную зависимость импеданса для такого включения 
+конденсаторов, прокомментировать как она изменяется 
+
+\item Построить эквивалентную схему для 4 одинаковых конденсаторов Y5V --- 1 
+мкФ, включенных параллельно. Привести схему и графики в отчёте.
+\end{enumerate}
+
+
 
 \subsection{Помехоподавляющие дроссели}
 
@@ -335,7 +343,7 @@ Qucs. Чтобы рассчитать импеданс дросселя также необходимо использовать
 
 \begin{figure}[!ht]
 \begin{center}
-\includegraphics[width=0.5\textwidth]{sem2img/induct-qucs.pdf}
+\includegraphics[width=\textwidth]{sem2img/induct-qucs.pdf}
 \end{center}
 \caption{Модель двухобмоточного дросселя в программе Qucs.}\label{dr-qucs}
 \end{figure}
@@ -348,8 +356,14 @@ Qucs. Чтобы рассчитать импеданс дросселя также необходимо использовать
 
 \subsubsection{Задание для самостоятельной работы}
 
-Собрать схему на рис.\ref{dr-qucs} и добиться её работоспособности. В отчёт
-включить схему и график зависимости импеданса от частоты. 
+\begin{enumerate}
+ \item Собрать схему на рис.\ref{dr-qucs} и добиться её работоспособности. В 
+отчёт включить схему и график зависимости импеданса от частоты. 
+ \item Подобрать элементы схемы так, чтобы смоделировать частотную зависимость 
+импеданса (рис. \ref{dross-z}) дросселя B82721A2501N020 (2x18 мГн)
+\end{enumerate}
+
+
 
 \section{Заключение}
 
