--- a/EMCseminar3.tex
+++ b/EMCseminar3.tex
@@ -65,9 +65,12 @@
           }
         }
 
+\newcounter{nn}
+\setcounter{nn}{0}
+        
 \begin{document}
  
-\title{Семинар \No3 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero 3 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Моделирование помехоподавляющего фильтра нижних частот.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
@@ -78,6 +81,112 @@
 Целью семинара является изучение свойств помехоподавляющих пассивных
 LC-фильтров, моделирование частотных зависимостей их S-параметров и
 Z-параметров. 
+
+
+\section{Пассивные фильтры}
+
+Передаточные функции фильтров Чебышева, Баттерворта и Кауэра можно реализовать 
+используя четырёхполюсник, содержащий только LC-элементы. 
+
+Наиболее распространённой топологией пассивных фильтров является лестничный 
+фильтр. Лестничный фильтр выполняется на основе П-образных звеньев. На 
+рис.\ref{fig:ladder} и рис.\ref{fig:ladder_hpf} показаны схемы лестничных 
+ФНЧ и ФВЧ соответственно. 
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[circuit ee IEC]
+% \begin{scope}[shift={(0,0)}]
+\node (V1) [ac source,info={$e_i$},point up] at (-0.5,0) {};
+\node (Zi) [resistor,point up, info={$Z_i$}] at (-0.5,1.2) {};
+
+\foreach \x in {0,3,6} {
+\begin{scope}[shift={(\x,0)}]
+\stepcounter{nn}
+\node (C2) [capacitor,point up,info'={$C_\thenn$}] at (1.5,0.5) {};
+\stepcounter{nn}
+\node (L1) [rotate=180,inductor, info'={$L_\thenn$}] at (2.5,2) {};
+
+\node (gnd4) [ground,point down] at (1.5,-0.7) {};
+\node (p5) [contact] at (1.5,2) {};
+\draw (5,2) --  (L1) --  (p5);
+\draw (gnd4) -- (C2) -- (p5);
+\end{scope}
+}
+
+
+\node (gnd) [point down,ground] at (-0.5,-1.2) {};
+\node (Zl) [resistor,point up,info'={$Z_н$}] at (10,0.5) {};
+\node (gndl) [ground,point down] at (10,-0.7) {};
+\draw (L1) -| (Zl) -- (gndl);
+\draw (gnd) -- (V1) -- (Zi)  |- (1.5,2);
+% \end{scope}
+\end{tikzpicture}
+\caption{Трёхзвённый лестничный ФНЧ 6-го порядка}\label{fig:ladder}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\begin{tikzpicture}[circuit ee IEC]
+% \begin{scope}[shift={(0,0)}]
+\node (V1) [ac source,info={$e_i$},point up] at (-0.5,0) {};
+\node (Zi) [resistor,point up, info={$Z_i$}] at (-0.5,1.2) {};
+
+\foreach \x in {0,3,6} {
+\begin{scope}[shift={(\x,0)}]
+
+\node (L1) [rotate=180,capacitor, info'={$C$}] at (2.5,2) {};
+\node (C2) [inductor,point up,info'={$L$}] at (4,0.5) {};
+\node (gnd4) [ground,point down] at (4,-0.7) {};
+\node (p5) [contact] at (4,2) {};
+\draw (1,2) --  (L1) --  (p5);
+\draw (gnd4) -- (C2) -- (p5);
+\end{scope}
+}
+
+\node (C1) [inductor, point up, info={$L$}] at (1,0.5) {};
+\node (gnd2) [ground,point down] at (1,-0.7) {};
+\node (p3) [contact] at (1,2) {};
+\node (gnd) [point down,ground] at (-0.5,-1.2) {};
+\node (Zl) [resistor,point up,info'={$Z_н$}] at (12,0.5) {};
+\node (gndl) [ground,point down] at (12,-0.7) {};
+\draw (p5) -| (Zl) -- (gndl);
+\draw (gnd) -- (V1) -- (Zi)  |- (1,2);
+\draw (gnd2) -- (C1) -- (p3);
+% \end{scope}
+\end{tikzpicture}
+\caption{Трёхзвённый лестничный ФВЧ}\label{fig:ladder_hpf}
+\end{figure}
+
+
+
+В качестве примера рассмотрим расчёт элементов ФНЧ Баттерворта.
+Для фильтра, включённого на нагрузку $Z_0=Z_i=Z_н$, $k$-й элемент 
+(рис.\ref{fig:ladder}) фильтра $n$-го порядка c частотой среза $\omega_c = 2 
+\pi f_c $ и  рассчитывается следующим образом:
+\begin{alignat}{3}
+ & \text{ёмкость (Ф):} \qquad & C_k = & \dfrac{X_k}{Z_0} \\
+ & \text{индуктивность (Гн):}  \qquad & L_k = & X_k \cdot Z_0 \\
+ & \text{где}         \qquad & X_k = & \dfrac{2}{\omega_c} \cdot \sin 
+\dfrac{(2 k + 1)\cdot\pi}{2 n}
+\end{alignat}
+
+Индексация $k$ начинается с нуля. Например, чтобы найти значение $L_1$ в данные 
+формулы нужно подставлять $k=0$, а чтобы найти $C_5$ нужно задать $k=4$.
+
+Если LC-элементы с данными параметрами реализовать невозможно (например в 
+СВЧ-фильтрах), то их можно заменить другими колебательными системами: МПЛ, 
+кварцевыми резонаторами, устройствами функциональной электроники. Пассивные 
+фильтры не обеспечивают усиление сигнала.
+
+\subsection{Задание для самостоятельной работы}
+
+ Пользуясь формулами из предыдущего раздела, рассчитать пассивный LC-фильтр 
+Баттерворта 6-го порядка (схема рис.\ref{fig:ladder}) с частотой среза: 
+$f_c=10\,кГц$ для группы РПД-111 и $f_c=16\, кГц$ для группы РПД\_С-111. 
+Нагрузка фильтра $Z_0=600\, Ом$ . Промоделировать данный фильтр в Qucs и 
+получить АЧХ. Какова частота среза фильтра. Расчёты и результаты моделирования 
+включить в отчёт. 
 
 \section{Схемы помехоподавляющих фильтров}
 
@@ -255,7 +364,6 @@ $Z_C$ и $Z_L$ --- индуктивное и емкостное сопротивления:
 
 \subsection{S-параметры пассивного четырёхполюсника}
 
-\subsection{S-параметры четырёхполюсника}
 
 П-образный ФНЧ является пассивным четырёхполюсником. Свойства пассивного
 четырёхполюсника в частотной области можно описать при помощи S-параметров.
@@ -326,6 +434,9 @@ $S_{22}$ --- коэффициент отражения $\Gamma_2$ от нагрузки. Показывает степень
 $Z_{11}$ --- входное комплексное сопротивление (импеданс);
 
 $Z_{22}$ --- выходное комплексное сопротивление (импеданс);
+
+
+
 
 \section{Моделирование ФНЧ в программе Qucs}
 
