--- a/EMCseminar4.tex
+++ b/EMCseminar4.tex
@@ -67,7 +67,7 @@
 
 \begin{document}
  
-\title{Семинар \No4 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero 4 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Способы измерения помех.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
