--- a/EMCseminar4.tex
+++ b/EMCseminar4.tex
@@ -185,6 +185,7 @@
 
 Эквиваленты сети производит фирма Rohde\&Schwarz.
 
+
 \subsection{Пробники напряжения}
 
 Пробник напряжения выполняет задачу отделения постоянной составляющей от
@@ -261,6 +262,8 @@
 блокирует постоянную составляющую и низкочастотные составляющие напряжения
 питания. Компонент \verb|Уравнение1| переводит значения S-параметров в децибелы.
 
+
+
 \subsection{Пробник TK-111}
 
 Пробник TK-111 представляет собой RC-ФВЧ, который блокирует постоянную
@@ -279,14 +282,39 @@
 
 \subsection{Задание для самостоятельной работы}
 
-Смоделировать в программе Qucs схему эквивалента сети рис. \ref{NNB-qucs} и
-добиться её работоспособности. В отчёт включить схему и зависимости
+По схеме эквивалента сети:
+
+\begin{enumerate}
+ \item Смоделировать в программе Qucs схему эквивалента сети рис. \ref{NNB-qucs} 
+и добиться её работоспособности. В отчёт включить схему и зависимости
 коэффициента передачи со стороны линии питания и аппаратуры. Выполнить подписи
 по осям графиков.
+ \item Найти по графику частоты среза (относительное ослабление сигнала на -3 
+дБ)
+ \item Оценить частоты среза по формулам:
+ \begin{equation}
+  f_{ср.н.} = \frac{1}{2\pi\sqrt{LC}}
+ \end{equation}
+ \begin{equation}
+  f_{ср.в} = \frac{1}{2\pi{(R_1+R_{н3})C}} \label{eq:RChp}
+ \end{equation}
+ 
+ Сравнить найденные в результате расчётов и моделирования значения. 
+ 
+ \item Определить по графикам затухание на частоте 50 Гц.
 
-Выполнить моделирование схемы пробника TK-111 рис.\ref{TK111-qucs}. В отчёт
-включить зависимость коэффициента передачи от частоты. График построить в
+\end{enumerate}
+
+По схеме пробника:
+\begin{enumerate}
+ \item Выполнить моделирование схемы пробника TK-111 рис.\ref{TK111-qucs}. В 
+отчёт включить зависимость коэффициента передачи от частоты. График построить в
 логарифмическом масштабе и выполнить подписи по осям. 
+ \item По аналогии с формулой (\ref{eq:RChp}) рассчитать частоту среза схема. 
+Найти частоту среза по графику и сравнить с результатами расчёта.
+\end{enumerate}
+
+
 
 \section{Заключение}
 
