--- a/EMCseminar5.tex
+++ b/EMCseminar5.tex
@@ -67,7 +67,7 @@
 
 \begin{document}
  
-\title{Семинар \No5 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero 5 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Спектр радиопомех, отдаваемых в сеть тиристорным
 регулятором мощности переменного тока.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
@@ -250,7 +250,7 @@ $$F_{max}=\frac{10000}{2\cdot20\,мс}=250\,кГц$$
 опорного напряжения $U_0=1\,мкВ$, используем следующее выражение:
 
 \begin{equation}
- U(\mbox{дБмкВ})=20\lg\frac{U}{U_0}
+ U(\mbox{дБмкВ})=20\lg\frac{U}{U_0} \label{eq:dbUv}
 \end{equation}
 
 В результате моделирования получаем следующую картину распределения спектра
@@ -274,10 +274,20 @@ $$F_{max}=\frac{10000}{2\cdot20\,мс}=250\,кГц$$
 
 \subsection{Задание для самостоятельной работы}
 
-Собрать в Qucs схему на рис.\ref{thyr-qucs} и добиться её работоспособности.
-Смоделировать спектр помех. В отчёт включить спектр помех и осциллограммы тока
-нагрузки (использовать параметр \verb|Pr1.It|). Выполнить подписи по осям на
-русском языке.
+\begin{enumerate}
+ \item Собрать в Qucs схему на рис.\ref{thyr-qucs}
+ \item Смоделировать переходный процесс в схеме. Длительность моделирования 20 
+мс, количество точек расчёта --- 10000
+ \item Рассчитать спектр напряжения помех, используя функцию 
+\verb|Time2Freq()|. Описание функции приведено во встроенной справочной 
+системе (запускается по F1). Напряжение помех снимается с узла \verb|w1|.
+ \item Рассчитать напряжение помех в дБмкВ, используя формулу (\ref{eq:dbUv}) и 
+функцию \verb|dB()|.
+ \item В отчёт включить спектр помех и осциллограммы тока нагрузки. Выполнить 
+подписи по осям на русском языке.
+\end{enumerate}
+
+
 
 \section{Заключение}
 
