--- a/EMC-contr.tex
+++ b/EMC-contr.tex
@@ -33,7 +33,8 @@
 \begin{document}
 
 \begin{center} 
-\textbf{Вопросы к зачёту по курсу <<Электромагнитная совместимость РЭС>>
+\textbf{Вопросы к рубежному контроля по курсу <<Электромагнитная 
+совместимость РЭС>>
 для групп РПД-111, РПД-С-111}
 \end{center}
 
@@ -57,30 +58,7 @@
 
 10. Перенос помех через цепи заземления.
 
-11. Принципы конструирования цепей заземления.
 
-12. Способы измерения помех, отдаваемых РЭА в питающую сеть и в
-нагрузку.
-
-13. Эквиваленты сети и пробники напряжения.
-
-14. Измерение электромагнитных помех, отдаваемых в эфир.
-
-15. Помехи при коммутации индуктивной нагрузки.
-
-16. Способы подавления помех при коммутации индуктивной нагрузки.
-
-17. Помехи в ИВЭП. Диодный выпрямитель.
-
-18. Помехи в ИВЭП. Фазовый тиристорный регулятор переменного напряжения.
-
-19. Помехи в ИВЭП. ИИП с однотактным преобразователем.
-
-20. Электростатический разряд (ЭСР) как источник помех.
-
-21. Модели воздействия ЭСР. HBM и MM модель.
-
-22. CDM и FCDM модель ЭСР.
 
 
 
@@ -91,17 +69,6 @@
 Составил:  \underline{\hspace{35mm}}	       доцент Кузнецов В.В.
 
 \end{center}
-
-\begin{thebibliography}{111}
-\bibitem{1} Князев А.Д., Кечиев Л.Н. Конструирование радиоэлектронной и
-электровычислительной аппаратуры с учётом электромагнитной совместимости. ---
-М.: Радио и связь, 1989. --- 224 с.
-\bibitem{2} Хабигер Э. Электромагнитная совместимость. Основы её обеспечения в
-технике, пер. с нем. --- М.: Энергоатомиздат, 1995 --- 304 с.
-\bibitem{ketschiew} Кечиев~Л.~Н., Пожидаев~Е.~Д. Защита электронных стредств от
-  воздействия статического электричества. --- М.: ИД <<Технологии>>,
-2005. --- 352 c.
-\end{thebibliography}
 
 
 
