--- a/EMCseminar6.tex
+++ b/EMCseminar6.tex
@@ -67,7 +67,7 @@
 
 \begin{document}
  
-\title{Семинар \No6 по курсу <<Электромагнитная совместимость
+\title{Семинар \textnumero6 по курсу <<Электромагнитная совместимость
 РЭС>>. \\ Электростатический разряд.}
 \author{к.т.н., доцент кафедры ЭИУ1-КФ Кузнецов В.В.}
 
@@ -404,9 +404,34 @@ $U_{ИМС}$, полученные в результате моделирования показаны
 
 \subsection{Задание для самостоятельной работы}
 
-Промоделировать схемы HBM, MM и CDM ЭСР (рис.\ref{HBM-qucs}, \ref{MM-qucs-I},
-\ref{CDM-qucs-I}). В отчёт включить графики тока разряда. Выполнить подписи по
-осям на русском языке. 
+\begin{enumerate}
+ \item Промоделировать схемы HBM и MM ЭСР (рис.\ref{HBM-qucs}, \ref{MM-qucs-I}, 
+построить осциллограммы тока. Подобрать отрезок моделирования, чтобы обеспечить 
+наиболее наглядный вид осциллограмм. Выполнить подписи по осям на русском языке.
+
+ \item Для HBM ЭСР вычислить длительность переходного процесса $\tau$ --- 
+время, за которое амплитуда тока спадает в $e$ раз и начальное значение тока 
+$I_0$.
+
+\begin{equation}
+ I_0 = \frac{U_{esd}}{R_{HBM}}
+\end{equation}
+
+\begin{equation}
+ \tau = R_{HBM} С_{HBM}
+\end{equation}
+
+Сравнить вычисленные значения и найденные в результате моделирования.
+
+\item Промоделировать схему рис. \ref{CDM-qucs}. Моделирования выполнить для 
+напряжения тестирования 2500 B и емкости С2= 5 пФ. Предварительно рассчитать 
+начальное напряжение на конденсаторе С2 по формуле (\ref{Udut}). Построить 
+осциллограммы тока ЭСР и напряжения на компоненте. Выполнить подписи по
+осям на русском языке.
+
+\end{enumerate}
+
+ 
 
 \section{Заключение}
 
